pretty much finish registration
