# swagger_server/controllers/registration_controller.py
@@ -4,19 +4,22 @@ import six
 from swagger_server.models.change_verication_mail_address import ChangeVericationMailAddress  # noqa: E501
 from swagger_server.models.email_verification_token import EmailVerificationToken  # noqa: E501
 from swagger_server.models.finish_registration import FinishRegistration  # noqa: E501
+from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server.models.inline_response201 import InlineResponse201  # noqa: E501
 from swagger_server.models.inline_response401 import InlineResponse401  # noqa: E501
 from swagger_server.models.invalid_verification_code import InvalidVerificationCode  # noqa: E501
 from swagger_server.models.is_initial_captcha_required import IsInitialCaptchaRequired  # noqa: E501
-from swagger_server.models.is_initial_captcha_required_content import IsInitialCaptchaRequiredContent  # noqa: E501
 from swagger_server.models.is_username_available import IsUsernameAvailable  # noqa: E501
-from swagger_server.models.is_username_available_content import IsUsernameAvailableContent  # noqa: F401,E501
 from swagger_server.models.primary_account_details import PrimaryAccountDetails  # noqa: E501
 from swagger_server.models.resend_verification_mail import ResendVerificationMail  # noqa: E501
 from swagger_server.models.resend_verification_mail1 import ResendVerificationMail1  # noqa: E501
-from swagger_server.models.successful_authentication import SuccessfulAuthentication  # noqa: F401,E501
 from swagger_server.models.username import Username  # noqa: E501
 from swagger_server import util
+
+from swagger_server.models.is_initial_captcha_required_content import IsInitialCaptchaRequiredContent  # noqa: E501
+from swagger_server.models.is_username_available_content import IsUsernameAvailableContent  # noqa: F401,E501
+from swagger_server.models.inline_response200_content import InlineResponse200Content  # noqa: F401,E501
+from swagger_server.models.successful_authentication import SuccessfulAuthentication
 
 
 def register_change_verification_mail(body):  # noqa: E501
@@ -31,7 +34,7 @@ def register_change_verification_mail(body):  # noqa: E501
     """
     if connexion.request.is_json:
         body = ChangeVericationMailAddress.from_dict(connexion.request.get_json())  # noqa: E501
-    return InlineResponse401(nonce="new nonce"), 200;
+    return InlineResponse401(nonce="new nonce"), 200
 
 
 def register_finish_registration(body):  # noqa: E501
@@ -122,6 +125,7 @@ def register_start_registration(body):  # noqa: E501
         return InlineResponse401(nonce="new nonce"), 200;
 
 
+
 def register_verify_email_address(body):  # noqa: E501
     """Verify a users account email
 
@@ -130,12 +134,11 @@ def register_verify_email_address(body):  # noqa: E501
     :param body: 
     :type body: dict | bytes
 
-    :rtype: InlineResponse401
+    :rtype: InlineResponse200
     """
     if connexion.request.is_json:
         body = EmailVerificationToken.from_dict(connexion.request.get_json())  # noqa: E501
-
     if body.content.verification_code != "123":
         return InlineResponse401(nonce="new nonce"), 403;
     else:
-        return InlineResponse401(nonce="new nonce"), 200;
+        return InlineResponse200(nonce="new nonce", content=InlineResponse200Content(True)), 200;
