# swagger_server/models/inline_response200.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.inline_response200_content import InlineResponse200Content  # noqa: F401,E501
+from swagger_server.models.nonce_token import NonceToken  # noqa: F401,E501
+from swagger_server import util
+
+
+class InlineResponse200(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, nonce: NonceToken=None, content: InlineResponse200Content=None):  # noqa: E501
+        """InlineResponse200 - a model defined in Swagger
+
+        :param nonce: The nonce of this InlineResponse200.  # noqa: E501
+        :type nonce: NonceToken
+        :param content: The content of this InlineResponse200.  # noqa: E501
+        :type content: InlineResponse200Content
+        """
+        self.swagger_types = {
+            'nonce': NonceToken,
+            'content': InlineResponse200Content
+        }
+
+        self.attribute_map = {
+            'nonce': 'nonce',
+            'content': 'content'
+        }
+        self._nonce = nonce
+        self._content = content
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse200':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
+        :rtype: InlineResponse200
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def nonce(self) -> NonceToken:
+        """Gets the nonce of this InlineResponse200.
+
+
+        :return: The nonce of this InlineResponse200.
+        :rtype: NonceToken
+        """
+        return self._nonce
+
+    @nonce.setter
+    def nonce(self, nonce: NonceToken):
+        """Sets the nonce of this InlineResponse200.
+
+
+        :param nonce: The nonce of this InlineResponse200.
+        :type nonce: NonceToken
+        """
+        if nonce is None:
+            raise ValueError("Invalid value for `nonce`, must not be `None`")  # noqa: E501
+
+        self._nonce = nonce
+
+    @property
+    def content(self) -> InlineResponse200Content:
+        """Gets the content of this InlineResponse200.
+
+
+        :return: The content of this InlineResponse200.
+        :rtype: InlineResponse200Content
+        """
+        return self._content
+
+    @content.setter
+    def content(self, content: InlineResponse200Content):
+        """Sets the content of this InlineResponse200.
+
+
+        :param content: The content of this InlineResponse200.
+        :type content: InlineResponse200Content
+        """
+
+        self._content = content
